--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -9,6 +9,8 @@
 		top:65px;
 		display: block;
 		content:'';
+		left:0;
+		right:0;
 		width:100%;
 		height:20px;
 		background:url('../img/header-bg.png') no-repeat center center;
